<resources>
    <string name="app_name">Course Manager</string>
    <string name="title_activity_term_list">TermListActivity</string>
    <string name="action_create_Sample">Create Sample Data</string>
    <string name="delete_all_notes">Delete All</string>
    <string name="are_you_sure">are you sure</string>
    <string name="all_deleted">all items deleted</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="new_term">New Term</string>
    <string name="itemUpdated">Item Updated</string>
    <string name="delete">Delete</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="current_term">Current Term</string>
    <string name="term_list">Term List</string>
    <string name="new_course">New Course</string>
    <string name="new_mentor">New Mentor</string>
    <string name="item_id_tag">1100</string>
    <string name="item_title_tag">1101</string>
    <string name="item_pos_tag">1102</string>
    <string name="selected_tag">1103</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="title">Title</string>
    <string name="mentors">Mentors</string>
    <string name="status">status</string>
    <string name="newMentorTag">newMentorTag</string>
    <string name="viewMentorTag">viewMentorTag</string>
    <string name="view_id_selected">selected</string>
    <string name="due_date">Due Date</string>
    <string name="new_assessment">New Assessment</string>
    <string name="term">Term:</string>
    <string name="textview">TextView</string>
    <string name="course">Course:</string>
    <string name="assessment">Assessment:</string>
    <string name="setpicture">Set Picture</string>
    <string name="new_note">New Note</string>
    <string name="share_note_text">Share Note Text</string>
    <string name="contains_courses">Contains Courses:</string>
    <string name="contains_assessments">Contains Assessments:</string>
    <string name="itemWithSubsNotDeletable">Item has sub-items, cannot be deleted</string>
    <string name="_24_hour_reminder">24 hour reminder</string>
    <string name="image_file_error">Unable to create image file</string>


</resources>
