<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView android:layout_width="match_parent"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_height="match_parent"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context="com.example.khaln.coursemanager.CourseDetailsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/editTitle"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/courseStatus"
        android:layout_below="@id/editTitle"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/editStatus"
        android:layout_below="@id/courseStatus"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/startDate"
        android:layout_below="@id/editStatus"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        />

    <DatePicker
        android:id="@+id/startDatePicker"
        android:layout_below="@id/startDate"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="85dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <TextView
        android:id="@+id/endDate"
        android:layout_below="@id/startDatePicker"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="wrap_content"
        android:text="@string/end_date" />

    <DatePicker
        android:id="@+id/endDatePicker"
        android:layout_below="@id/endDate"
        android:layout_width="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_height="85dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <TextView
        android:id="@+id/mentorTitle"
        android:layout_below="@id/endDatePicker"
        android:layout_width="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="26dp"
        android:layout_height="wrap_content"
        android:text="@string/mentors"
        android:gravity="top" />


    <ListView
        android:id="@+id/android:list"
        android:layout_below="@id/mentorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"/>

    <at.markushi.ui.CircleButton
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_alignParentRight="true"
        android:layout_below="@+id/endDatePicker"
        app:cb_color="@color/colorPrimary"
        app:cb_pressedRingWidth="8dp"
        android:layout_gravity="right"
        android:src="@drawable/ic_action_add"
        android:onClick="openEditorForNewItem" />



</RelativeLayout>
<!--</ScrollView>-->
